public/index.css
@import url("static/fonts/index.css");

:root {
    --red: #e78284;
    --redish: #e73a40;
    --white: #ffffff;
    --border: #ccc;
    --background: #f2d5cf53;
    --foreground: #f2d5cfD9;
    --progress-bar: #eba0ac;

    background-color: var(--background);
    font-family: 'Jetbrains Mono', system-ui, -apple-system, BlinkMacSystemFont, segoe ui, Roboto, Oxygen, Ubuntu, Cantarell, open sans, helvetica neue, sans-serif;
}

header {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    margin-left: 24px;
    margin-right: 24px;
}

body {
    display: flex;
    flex-direction: column;
    min-height: 95vh;
}

main {
    flex-grow: 1;
}


table.full {
    width: 100%;
}

td {
    text-align: center;
}

footer {
    display: flex;
    flex-direction: row-reverse;
    justify-content: center;
    margin-left: 24px;
    margin-right: 24px;
}

nav {
    display: flex;
    flex-wrap: wrap;
    gap: 8px;
}

main {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-top: 4%;
    margin-left: 5%;
    margin-right: 5%;
    gap: 32px;
}

input {
    width: 60%;
    padding: 10px 20px;
    border: 1px solid var(--border);
    border-radius: 6px;
    box-sizing: border-box;
    font-size: 16px;
    transition: all 0.3s ease-in-out;
}

h1,
h2,
p,
span {
    text-align: center;
    margin: 0;
}

form {
    display: flex;
    flex-direction: column;
    gap: 16px;
    width: 100%;
}

fieldset {
    display: flex;
    flex-direction: column;
    gap: 8px;
}

legend {
    font-weight: bold;
}

fieldset.actions {
    display: flex;
    flex-direction: row;
    justify-content: start;
    padding: 0;
    margin: 0;
    border: none;
}

button {
    font-family: inherit;
    text-align: center;
    width: fit-content;
    padding: 4px 8px 4px 8px;
}

.group {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
}

.main-content-1 {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 16px;
    width: 100%;
}

.main-content-2 {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 24px;
    width: 80%;
}


.avatar {
    position: absolute;
    border-radius: 50%;
    object-fit: cover;
    border: 2px solid var(--border);
    width: 96px;
    top: -50%;
    right: 0%;
}

.bio {
    position: relative;
    display: flex;
    align-items: center;
    justify-content: center;
    width: 100%;
}

.bio-description {
    width: 75%;
}

.chip {
    background-color: var(--red);
    color: var(--white);
    font-weight: bold;
    cursor: pointer;
    padding: 0.5rem 1rem;
    border-radius: 20px;
    font-size: 12px;
}

.card {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    text-align: center;
    width: 240px;
    gap: 8px;
    padding: 32px;
    border: 1px solid var(--red);
    border-radius: 6px;
}

.card>img {
    width: 64px;
    height: 64px;
}

.card:hover {
    transition: transform 0.4s ease-in-out;
    transform: scale(1.05);
}

.deck {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
    gap: 16px;
}

.divider {
    width: 100%;
    height: 1px;
    background-color: var(--border);
}

.error {
    color: var(--redish);
}

.gallery {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
    width: 100%;
    gap: calc(1% / 3);
}

.gallery>a {
    width: 33%;
}

.gallery>a>img {
    height: 100%;
    max-width: 100%;
}

.logo {
    display: flex;
    flex-direction: column;
    align-items: end;
}

.logo-top {
    display: flex;
    flex-direction: row;
    align-items: center;
    text-decoration: none;
    color: currentColor;
    gap: 12px;
}

.logo-text {
    font-size: small;
    color: var(--redish);
    text-decoration: none;
    margin-bottom: 8px;
}

.speedtest>span {
    display: flex;
    flex-direction: row;
    text-align: center;
    align-items: start;
    gap: 8px;
}

.speedtest-animate {
    font-size: large;
    font-weight: bold;
    transition: 300ms;
}

.speedtest-status {
    text-align: center;
}

.speedtest-preview {
    display: flex;
    flex-direction: column;
    align-items: start;
}

.speedtest-results {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
}

.speedtest-results>span {
    display: flex;
    flex-direction: row;
    text-align: center;
    align-items: start;
    gap: 8px;
}

/* Tooltips original source: https://www.w3schools.com/css/css_tooltip.asp */
.tooltip {
    position: relative;
    display: inline-block;
}

.tooltip .tooltip-text {
    visibility: hidden;
    background-color: gray;
    text-align: center;
    border: 2px;
    border-radius: 4px;
    position: absolute;
    bottom: 100%;
    left: 50%;
    margin-left: -50%;
    z-index: 1;
}

.tooltip:hover .tooltip-text {

    visibility: visible;
}

.tooltip .tooltip-text::after {
    content: "";
    position: absolute;
    top: 100%;
    left: 50%;
    margin-left: -5px;
    border-width: 5px;
    border-style: solid;
    border-color: gray transparent transparent transparent;
}

.danger-bg {
    background-color: var(--red);
}

.chart {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 100%;
}

#chart-tooltip {
    position: absolute;
    display: none;
    background: cornsilk;
    border: 1px solid black;
    border-radius: 5px;
    padding: 5px;
}

.youtube-video>img {
    max-width: 100%;
    border: 2px solid var(--border);
}


.server-nodes {
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
    justify-content: center;
    gap: 1%;
    width: 100%;
}

.node-stat-block {
    display: flex;
    flex-direction: row;
    gap: 12px;
}

.node-stat-field {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    border-bottom-style: solid;
    border-bottom-color: var(--border);
    width: 100%;
}

.node-stat-field-label {
    font-weight: bold;
    margin-bottom: 8px;
}

.node-stat-fill {
    display: flex;
    flex-direction: row;
    gap: 12px;
}

.node-progress-block {
    display: flex;
    flex-direction: row;
    gap: 16px;
}

.progress-bar {
    background-color: var(--foreground);
    width: 100%;
    height: min-content;
    border-radius: 5px;
}

.progress-bar-fill {
    background-color: var(--progress-bar);
    white-space: nowrap;
    border-radius: 5px;
    text-indent: 8px;
}

@media screen and (max-width: 1440px) {
    main {
        margin-left: 0;
        margin-right: 0;
    }
}

@media screen and (max-width: 860px) {
    .bio>img {
        display: none;
    }

    .card {
        width: 100%;
    }

    .gallery {
        gap: 1%;
    }

    .gallery>a {
        width: 49%;
    }
}

@media screen and (max-width: 560px) {
    header {
        flex-direction: column;
    }

    footer {
        justify-content: center;
    }

    fieldset.actions {
        justify-content: center;
    }

    .gallery {
        flex-direction: column;
        flex-wrap: nowrap;
        gap: 0;
    }

    .gallery>a {
        width: 100%;
    }
}

